--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   },
   "dependencies": {
     "@types/classnames": "^2.3.0",
+    "antd": "^6.2.0",
+    "axios": "^1.13.2",
     "classnames": "^2.5.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.71.1",
     "react-router": "^7.8.2",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@sentry/vite-plugin": "^4.1.1",
