--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "@types/classnames": "^2.3.0",
     "antd": "^6.2.0",
     "axios": "^1.13.2",
@@ -22,6 +23,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.71.1",
+    "react-redux": "^9.2.0",
     "react-router": "^7.8.2",
     "vite-tsconfig-paths": "^5.1.4",
     "yup": "^1.7.1"
@@ -36,7 +38,6 @@
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
     "@vitejs/plugin-react": "^5.0.1",
-    "xbel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.34.0",
     "eslint-plugin-css-modules": "^2.12.0",
     "eslint-plugin-import": "^2.31.0",
