--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^6.2.0",
     "axios": "^1.13.2",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.19",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.71.1",
